# ViennaEMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format-project.sh
cmake/: ViennaEMCConfig.cmake.in  cmake_uninstall.cmake.in  prepare.cmake
doc/manual/: Makefile  MyIEEEtran.bst  classic_ensemble_monte_carlo.tex  license.tex  literature.bib  manual.tex  phonon_decoherence.tex  visualization.tex  wigner_ensemble_monte_carlo.tex
doc/manual/figures/: para1.eps  para2.eps  para3.eps  para4.eps  para5.eps  para6.eps  para7.eps  wiens_prop1.eps  wiens_prop9.eps
docs/doxygen/: doxygen_template.txt  make_doxygen.sh
examples/: CMakeLists.txt  SiliconFunctions.hpp
examples/bulkSimulation/: CMakeLists.txt  README.md  basicBulkParticleHandler.hpp  bulkSimulation.cpp  plotBulkSimulationResults.py
examples/bulkSimulationFMM/: CMakeLists.txt  FMMBulkParticleHandler.hpp  README.md  bulkSimulationFMM.cpp  customHotElectron.hpp  plotBulkSimulationFMMResults.py
examples/copper/: cur_from_charge_SD.csv  current_cumulative.csv  current_density.csv  current_densityX.csv  current_densityY.csv  device_dimensions.in  electron_density.csv  fieldXY.csv  fields_density_x.csv  init_1000_electron_density.csv  init_1000_potential.csv  init_1000_sheet_density_x.csv  init_600_electron_density.csv  init_600_potential.csv  init_600_sheet_density_x.csv  init_700_electron_density.csv  init_700_potential.csv  init_700_sheet_density_x.csv  init_800_electron_density.csv  init_800_potential.csv  init_800_sheet_density_x.csv  init_900_electron_density.csv  init_900_potential.csv  init_900_sheet_density_x.csv  potential.csv  sheet_density_x.csv  simulation_parameters.in  v_e_aver.csv  x_axis.csv  y_axis.csv
examples/mosfet2D/: CMakeLists.txt  NECSchemeVWD.hpp  README.md  electronVWD.hpp  mosfet2D.cpp  plotMosfetResults.py
examples/resistor2D/: CMakeLists.txt  README.md  plotResistor2D.py  resistor2D.cpp
examples/singleLayerMoS2/: CMakeLists.txt  README.md  calcMobilityFromVACF.py  electron2D.hpp  parameterKaasbjerg.hpp  parameterLi.hpp  parameterPilotto.hpp  plotSingleLayerMoS2Results.py  singleLayerMoS2.cpp
helper/emcPlottingFiles/: setup.py
helper/emcPlottingFiles/emcPlottingFiles/: plotBulkSimulationResults.py  plotCurrentCharacteristics.py  plotGrid.py  plotParticleCharacteristics.py  readResultFile.py
include/: emc.h  emcBoundaryPos.hpp  emcConstants.hpp  emcContact.hpp  emcDevice.hpp  emcDopingProfile.hpp  emcGrainScatterMechanism.hpp  emcGrid.hpp  emcMaterial.hpp  emcMessage.hpp  emcOutput.hpp  emcParticle.hpp  emcParticleDrift.hpp  emcParticleInitialization.hpp  emcScatterHandler.hpp  emcSimulation.hpp  emcSimulationParameter.hpp  emcSimulationResults.hpp  emcSurface.hpp  emcTestAsserts.hpp  emcUtil.hpp
include/PMSchemes/: emcAbstractPMScheme.hpp  emcCICScheme.hpp  emcEFieldCalculation.hpp  emcNECScheme.hpp  emcNGPScheme.hpp
include/ParticleHandler/: emcAbstractParticleHandler.hpp  emcBasicParticleHandler.hpp  emcFMMParticleHandler.hpp
include/ParticleHandler/FMM/: FBasicParticleContainerMover.hpp  FP2PRCutoff.hpp  FRotationKernel.hpp
include/ParticleType/: emcDonor.hpp  emcElectron.hpp  emcParticleType.hpp
include/PoissonSolver/: emcAbstractSolver.hpp  emcBicgSTABSolver.hpp  emcJacobiSolver.hpp  emcSORSolver.hpp
include/ScatterMechanisms/: emcAcousticScatterMechanism.hpp  emcAcousticSingleLayerScatterMechanism.hpp  emcCoulombScatterMechanism.hpp  emcFirstOrderInterValleyScatterMechanism.hpp  emcFirstOrderSingleLayerIntervalleyScatterMechanism.hpp  emcFroehlichInteractionSingleLayer.hpp  emcScatterMechanism.hpp  emcZeroOrderInterValleyScatterMechanism.hpp  emcZeroOrderSingleLayerInterValleyScatterMechanism.hpp
include/SurfaceScatterMechanisms/: emcConstantSurfaceScatterMechanism.hpp  emcMomentumDependentSurfaceScatterMechanism.hpp  emcSurfaceScatterMechanism.hpp
include/ValleyTypes/: README.md  emcAbstractValley.hpp  emcNonParabolicAnisotropSingleLayerValley.hpp  emcNonParabolicAnistropValley.hpp  emcNonParabolicIsotropSingleLayerValley.hpp  emcNonParabolicIsotropValley.hpp  emcParabolicAnisotropValley.hpp  emcParabolicIsotropSingleLayerValley.hpp  emcParabolicIsotropValley.hpp
src/: NEC_scheme.c  acoustic.c  apply_voltage.c  check_source_drain.c  core.c  coulomb_scattering.c  device_structure.c  drift.c  electric_field_update.c  electrons_initialization.c  free_flight_scatter.c  init_kspace.c  integrate.c  intervalley.c  main.c  mat_par_initialization.c  output.c  poisson_SOR.c  relaxation_scattering.c  scatter_carrier.c  scattering_table.c  velocity_energy_cumulative.c
tests/: CMakeLists.txt
tests/testCutOffRadius/: CMakeLists.txt  testCutOffRadius.cpp
tests/testDevice/: CMakeLists.txt  testBasicDevice2D.hpp  testBasicDevice3D.hpp  testDevice.cpp
tests/testFMMLibrary/: CMakeLists.txt  testFMMLibrary.cpp
tests/testGrainScatterMechanism/: CMakeLists.txt  testGrainScatterMechanism.cpp
tests/testGrid/: CMakeLists.txt  testGrid.cpp
tests/testParticleHandler/: CMakeLists.txt  testParticleHandler.cpp
tests/testParticleMovement/: CMakeLists.txt  testParticleMovement.cpp
tests/testSurfaceScatterMechanisms/: CMakeLists.txt  testSurfaceScatterMechanisms.cpp
tests/testValleyCoordinateTransformation/: CMakeLists.txt  testValleyCoordinateTransformation.cpp
